rbac/envoy-config.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081

node:
  cluster: hello-service
  id: node1

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 82
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: /dev/stdout
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: ping-service
          http_filters:
            - name: envoy.filters.http.rbac
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.http.rbac.v2.RBAC
                rules:
                  action: ALLOW
                  policies:
                    "service-admin":
                      permissions:
                        - any: true
                      principals:
                        - authenticated:
                            principal_name:
                              exact: "cluster.local/ns/default/sa/admin"
                        - authenticated:
                            principal_name:
                              exact: "cluster.local/ns/default/sa/superuser"
                    "product-viewer":
                      permissions:
                        - and_rules:
                            rules:
                              - header: { name: ":method", exact_match: "GET" }
                              - url_path:
                                  path: { prefix: "/products" }
                              - or_rules:
                                  rules:
                                    - destination_port: 80
                                    - destination_port: 443
                      principals:
                        - any: true
            - name: envoy.filters.http.router
  clusters:
  - name: ping-service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: ping-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9090
